--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "css-loader": "^0.28.11",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router": "^4.3.1",
     "react-scripts": "1.1.4",
     "style-loader": "^0.21.0"
   },
